@@ -38,7 +38,6 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.Semaphore;
-import java.util.stream.Collectors;
 
 /**
  * Controller for viewing all the created Gardens
@@ -63,25 +62,24 @@ public class GardensController {
 
     private static final int COUNT_PER_PAGE = 10;
 
-
     private volatile long lastRequestTime = Instant.now().getEpochSecond();
 
     /**
      * Constructor for the GardensController with {@link Autowired} to connect
      * this controller with other services
      *
-     * @param gardenService         service to access garden repository
-     * @param securityService       service to access security methods
-     * @param plantService          service to access plant repository
-     * @param weatherService        service to perform weather api calls
-     * @param objectMapper          used for JSON conversion
-     * @param gardenTagService      service to access tag repository
-     * @param userService           service to access user repository
+     * @param gardenService    service to access garden repository
+     * @param securityService  service to access security methods
+     * @param plantService     service to access plant repository
+     * @param weatherService   service to perform weather api calls
+     * @param objectMapper     used for JSON conversion
+     * @param gardenTagService service to access tag repository
+     * @param userService      service to access user repository
      */
     @Autowired
     public GardensController(GardenService gardenService, SecurityService securityService, PlantService plantService,
-                             WeatherService weatherService, ObjectMapper objectMapper, GardenTagService gardenTagService,
-                             ProfanityService profanityService, UserService userService) {
+            WeatherService weatherService, ObjectMapper objectMapper, GardenTagService gardenTagService,
+            ProfanityService profanityService, UserService userService) {
         this.gardenService = gardenService;
         this.plantService = plantService;
         this.securityService = securityService;
@@ -102,7 +100,7 @@ public class GardensController {
     @GetMapping("/my-gardens")
     public String myGardens(@RequestParam(defaultValue = "1") int page,
             @RequestParam(defaultValue = "All") String filter,
-                            HttpServletRequest request,
+            HttpServletRequest request,
             Model model) {
         logger.info("GET /my-gardens");
 
@@ -153,7 +151,7 @@ public class GardensController {
 
             weatherList.addAll(gardenWeather.getRetrievedWeatherData().stream()
                     .map(WeatherModel::new)
-                    .collect(Collectors.toList()));
+                    .toList());
         } catch (NullPointerException error) {
             noWeather = new DailyWeather("no_weather_available_icon.png", null, null);
             noWeather.setError("Location not found, please update your location to see the weather");
@@ -168,7 +166,7 @@ public class GardensController {
         return weatherList;
     }
 
-    private void handleWeatherMessages(List<WeatherModel> weatherList,  Garden garden, Model model) {
+    private void handleWeatherMessages(List<WeatherModel> weatherList, Garden garden, Model model) {
         WeatherModel beforeYesterdayWeather = weatherList.get(0);
         WeatherModel yesterdayWeather = weatherList.get(1);
         WeatherModel currentWeather = weatherList.get(2);
@@ -180,7 +178,8 @@ public class GardensController {
         if (Objects.equals(beforeYesterdayWeather.getDescription(), "Sunny")
                 && Objects.equals(yesterdayWeather.getDescription(), "Sunny")
                 && Objects.equals(currentWeather.getDescription(), "Sunny")) {
-            model.addAttribute("message", "There hasn't been any rain recently, make sure to water your plants if they need it");
+            model.addAttribute("message",
+                    "There hasn't been any rain recently, make sure to water your plants if they need it");
             model.addAttribute("goodMessage", false);
             gardenService.changeGardenNeedsWatering(garden.getGardenId(), true);
         } else {
@@ -213,7 +212,8 @@ public class GardensController {
             @RequestParam(required = false) String weatherListJson,
             HttpServletRequest request,
             HttpServletResponse response,
-            Model model) {
+            RedirectAttributes redirectAttributes,
+            Model model) throws ServletException {
         logger.info("GET /my-gardens/{}", gardenId);
         Optional<Garden> optionalGarden = gardenService.getGardenById(gardenId);
 
@@ -233,6 +233,8 @@ public class GardensController {
 
         securityService.addUserInteraction(gardenId, ItemType.GARDEN, LocalDateTime.now());
 
+        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
+
         List<WeatherModel> weatherList = null;
 
         try {
@@ -241,16 +243,15 @@ public class GardensController {
                 });
             }
         } catch (Exception e) {
-            logger.error("An error occurred while mapping the weatherListJson: " + e.getMessage());
+            logger.error("An error occurred while mapping the weatherListJson: {}", e.getMessage());
         }
 
         try {
-            Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
             if (inputFlashMap != null) {
                 weatherList = (List<WeatherModel>) inputFlashMap.get("weatherList");
             }
         } catch (Exception e) {
-            logger.error("An error occurred while getting the weather list from the flash map: " + e.getMessage());
+            logger.error("An error occurred while getting the weather list from the flash map: {}", e.getMessage());
         }
 
         if (weatherList == null || weatherList.isEmpty()) {
@@ -271,7 +272,7 @@ public class GardensController {
                 });
             }
         } catch (Exception e) {
-            logger.error("An error occurred while reading the weatherListJson: " + e.getMessage());
+            logger.error("An error occurred while reading the weatherListJson: {}", e.getMessage());
         }
 
         weatherListJson = null;
@@ -279,7 +280,8 @@ public class GardensController {
         try {
             weatherListJson = objectMapper.writeValueAsString(weatherList);
         } catch (Exception e) {
-            logger.error("An error occurred while writing the weatherListJson: " + e.getMessage());
+            logger.error("An error occurred while writing the weatherListJson: {}", e.getMessage());
+            logger.error("An error occurred while writing the weatherListJson: {}", e.getMessage());
         }
 
         model.addAttribute("weatherListJson", weatherListJson);
@@ -294,10 +296,48 @@ public class GardensController {
         model.addAttribute("plantPictureError", plantPictureError);
 
         // Used for displaying messages after a redirect e.g. from the verify page
-        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
         if (inputFlashMap != null) {
             model.addAttribute("openModal", inputFlashMap.get("openModal"));
-            model.addAttribute("tagMessageText",inputFlashMap.get("tagMessageText"));
+            model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+
+            // The below If statements check if the status of a pending tag has
+            // been updated and adjust error messages acrodingly if thats the case
+            if (inputFlashMap.get("pendingTagName") == null) {
+                model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+            } else {
+                Optional<GardenTag> pendingTag = gardenTagService
+                        .getByName(inputFlashMap.get("pendingTagName").toString());
+
+                if (pendingTag.isPresent()) {
+                    if (pendingTag.get().getTagStatus() == TagStatus.INAPPROPRIATE) {
+                        // security service will return old strike count so adding one to account for
+                        // this tag.
+                        int userStrikes = securityService.getCurrentUser().getStrikes() + 1;
+                        logger.info("{} now has {} strikes", garden.getOwner().getFirstName(), userStrikes);
+                        model.addAttribute("tagErrorText", "This tag does not meet the language " +
+                                "standards for Gardener's Grove. A warning strike has been added to your account");
+                        if (userStrikes == 5) {
+                            model.addAttribute("tagErrorText",
+                                    "You have added an inappropriate tag for the fifth time." +
+                                            " You have been sent a warning email. " +
+                                            "If you add another inappropriate tag, you will be banned for a week.");
+                        } else if (userStrikes == 6) {
+                            redirectAttributes.addFlashAttribute("message",
+                                    "Your account is blocked for 7 days due to inappropriate conduct");
+                            redirectAttributes.addFlashAttribute("goodMessage", false);
+                            request.logout();
+                            return "redirect:/login";
+                        }
+                        model.addAttribute("tagMessageText", "");
+                    } else if (pendingTag.get().getTagStatus() == TagStatus.APPROPRIATE) {
+                        model.addAttribute("tagMessageText", "");
+                    } else {
+                        model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+                    }
+                } else {
+                    model.addAttribute("tagMessageText", inputFlashMap.get("tagMessageText"));
+                }
+            }
         }
 
         List<GardenTagRelation> tagRelationsList = gardenTagService.getGardenTagRelationByGarden(garden);
@@ -315,6 +355,15 @@ public class GardensController {
                 .toList();
 
         model.addAttribute("pendingTags", pendingTags);
+
+        if (garden.getOwner().isBanned()) {
+            redirectAttributes.addFlashAttribute("message",
+                    "Your account is blocked for 7 days due to inappropriate conduct");
+            redirectAttributes.addFlashAttribute("goodMessage", false);
+            request.logout();
+            return "redirect:/login";
+        }
+
         model.addAttribute("tagsList", tagsList);
         return "gardenDetailsPage";
     }
@@ -325,7 +374,6 @@ public class GardensController {
      *
      * @param gardenId         - the id of the garden being edited
      * @param makeGardenPublic - the new status of the garden isPublic
-     *
      * @return thymeleaf garden detail page
      */
     @PostMapping("/my-gardens/{gardenId}/public")
@@ -359,7 +407,7 @@ public class GardensController {
                 weatherList = objectMapper.readValue(weatherListJson, new TypeReference<List<WeatherModel>>() {
                 });
             } catch (Exception e) {
-                logger.error("An error occurred while reading the weatherListJson: " + e.getMessage());
+                logger.error("An error occurred while reading the weatherListJson: {}", e.getMessage());
             }
         }
         redirectAttributes.addFlashAttribute("page", page);
@@ -370,13 +418,15 @@ public class GardensController {
     }
 
     /**
-     * Helper to set the model of garden details page for non-blue sky scenarios after tag post-mapping
+     * Helper to set the model of garden details page for non-blue sky scenarios
+     * after tag post-mapping
+     * 
      * @param garden entity of the page to be displayed
-     * @param tag text
-     * @param page index
+     * @param tag    text
+     * @param page   index
      * @return filename of thymeleaf template
      */
-    private String setGardenDetailModel(Garden garden, String tag, int page, Model model){
+    private String setGardenDetailModel(Garden garden, String tag, int page, Model model) {
         List<WeatherModel> weatherList;
         weatherList = getGardenWeatherData(garden);
         if (weatherList.size() > 1) {
@@ -420,20 +470,23 @@ public class GardensController {
 
     /**
      * This function creates a post mapping for adding a tag to a garden
+     *
      * @param gardenId id of garden to add tag to
-     * @param tag tag string
-     * @param page pagination page
+     * @param tag      tag string
+     * @param page     pagination page
      * @return template for garden page or redirect to garden page
      */
     @PostMapping("/my-gardens/{gardenId}/tag")
     public String addGardenTag(@PathVariable Long gardenId,
-                                   @RequestParam("tag") String tag,
-                                   @RequestParam(defaultValue = "1") int page,
-                                   RedirectAttributes redirectAttributes,
-                                   HttpServletResponse response,
-                                   HttpServletRequest request,
-                                   Model model) throws ServletException, InterruptedException {
+            @RequestParam("tag") String tag,
+            @RequestParam(defaultValue = "1") int page,
+            RedirectAttributes redirectAttributes,
+            HttpServletResponse response,
+            HttpServletRequest request,
+            Model model) throws ServletException, InterruptedException {
         logger.info("POST /my-gardens/{}/tag", gardenId);
+
+        tag = tag.trim();
 
         ValidationResult tagResult = InputValidator.validateTag(tag);
         boolean gardenAlreadyHasThisTag = false;
@@ -457,7 +510,8 @@ public class GardensController {
                 asynchronousTagProfanityCheck(tag, garden.getOwner());
             }
 
-            gardenAlreadyHasThisTag= gardenTagService.getGardenTagRelationByGardenAndTag(garden, gardenTag).isPresent();
+            gardenAlreadyHasThisTag = gardenTagService.getGardenTagRelationByGardenAndTag(garden, gardenTag)
+                    .isPresent();
 
             if (!gardenAlreadyHasThisTag && tagResult.valid() && gardenTag.getTagStatus() != TagStatus.INAPPROPRIATE) {
                 gardenTagService.addGardenTagRelation(new GardenTagRelation(garden, gardenTag));
@@ -488,31 +542,47 @@ public class GardensController {
                 }
 
                 if (garden.getOwner().isBanned()) {
-                    redirectAttributes.addFlashAttribute("message", "Your account is blocked for 7 days due to inappropriate conduct");
+                    redirectAttributes.addFlashAttribute("message",
+                            "Your account is blocked for 7 days due to inappropriate conduct");
                     redirectAttributes.addFlashAttribute("goodMessage", false);
                     request.logout();
                     return "redirect:/login";
                 }
             }
 
-
-
             List<WeatherModel> weatherList;
             weatherList = getGardenWeatherData(garden);
             if (weatherList.size() > 1) {
                 handleWeatherMessages(weatherList, garden, model);
             }
-            return setGardenDetailModel(garden,tag,page,model);
+
+            if (garden.getOwner().isBanned()) {
+                redirectAttributes.addFlashAttribute("message",
+                        "Your account is blocked for 7 days due to inappropriate conduct");
+                redirectAttributes.addFlashAttribute("goodMessage", false);
+                request.logout();
+                return "redirect:/login";
+            }
+            return setGardenDetailModel(garden, tag, page, model);
         }
 
-        if (newTag.isPresent() && newTag.get().getTagStatus() == TagStatus.PENDING)
-        {
-            redirectAttributes.addFlashAttribute("tagMessageText", String.format("Your tag \"%s\" is currently being checked for profanity. " +
-                    "If it follows the language standards for our app, it will be added to your garden.",tag));
+        if (newTag.isPresent() && newTag.get().getTagStatus() == TagStatus.PENDING) {
+            redirectAttributes.addFlashAttribute("tagMessageText",
+                    String.format("Your tag \"%s\" is currently being checked for profanity. " +
+                            "If it follows the language standards for our app, it will be added to your garden.", tag));
+            redirectAttributes.addFlashAttribute("pendingTagName", tag);
         }
 
         redirectAttributes.addAttribute("page", page);
         redirectAttributes.addFlashAttribute("openModal", "true");
+
+        if (garden.getOwner().isBanned()) {
+            redirectAttributes.addFlashAttribute("message",
+                    "Your account is blocked for 7 days due to inappropriate conduct");
+            redirectAttributes.addFlashAttribute("goodMessage", false);
+            request.logout();
+            return "redirect:/login";
+        }
 
         return "redirect:/my-gardens/{gardenId}";
 
@@ -567,6 +637,7 @@ public class GardensController {
 
         if (plantPictureResult.valid() && !plantPicture.isEmpty()) {
             plantService.updatePlantPicture(plantToUpdate.get(), plantPicture);
+            securityService.addUserInteraction(plantId, ItemType.PLANT, LocalDateTime.now());
         } else {
             redirectAttributes.addAttribute("plantPictureError", plantPictureResult.toString());
         }
@@ -651,9 +722,10 @@ public class GardensController {
         return weatherService.getWeather(gardenLatitude, gardenLongitude);
     }
 
-
     /**
-     * Retrieves tag suggestions from the Garden Tag Repository through the Garden Tag Service
+     * Retrieves tag suggestions from the Garden Tag Repository through the Garden
+     * Tag Service
+     *
      * @param query - The search query for tag autocomplete suggestions
      * @return a list of garden tags whose names are similar to the query
      */
@@ -666,15 +738,12 @@ public class GardensController {
     private void asynchronousTagProfanityCheck(String tagName, User user) throws InterruptedException {
         Thread asyncThread = new Thread((() -> {
             boolean tagContainsProfanity = profanityService.containsProfanity(tagName, PriorityType.LOW);
-            if (!tagContainsProfanity)
-            {
+            if (!tagContainsProfanity) {
                 gardenTagService.updateGardenTagStatus(tagName, TagStatus.APPROPRIATE);
-            }
-            else
-            {
+            } else {
+                securityService.handleStrikeUser(user);
                 gardenTagService.updateGardenTagStatus(tagName, TagStatus.INAPPROPRIATE);
                 gardenTagService.deleteRelationByTagName(tagName);
-                securityService.handleStrikeUser(user);
                 logger.info("{} has {} strikes", user.getFirstName(), user.getStrikes());
 
             }
@@ -682,9 +751,5 @@ public class GardensController {
         asyncThread.start();
 
     }
-
-
-
-
 
 }
